# gerasim_hw

./: .gitignore  CMakeLists.txt  accessed_hw_1.cpp  generated_tests.txt  main.cpp  pseudocode.md
include/: bfprt.hpp  pch.hpp  select.hpp  split.hpp
src/: main.cpp
test/: test.cpp
utils/: generate_tests.cpp
